--- a/01-intro/rag-intro.ipynb
+++ b/01-intro/rag-intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "e9ea745e-24c2-475c-9692-66c9588a2c22",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-07-28 17:47:33--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.111.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+      "--2024-07-30 17:05:57--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.110.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 3832 (3.7K) [text/plain]\n",
-      "Saving to: ‘minsearch.py.1’\n",
+      "Saving to: ‘minsearch.py.4’\n",
       "\n",
-      "minsearch.py.1      100%[===================>]   3.74K  --.-KB/s    in 0s      \n",
+      "minsearch.py.4      100%[===================>]   3.74K  --.-KB/s    in 0s      \n",
       "\n",
-      "2024-07-28 17:47:34 (26.8 MB/s) - ‘minsearch.py.1’ saved [3832/3832]\n",
+      "2024-07-30 17:05:57 (16.5 MB/s) - ‘minsearch.py.4’ saved [3832/3832]\n",
       "\n"
      ]
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "3be35bd6-efbe-40ea-a2ab-6ead08d42bdc",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "85f18aea-0eec-4bf4-8f00-82bd3049846b",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "65ff1a07-94d1-40fc-96b9-44c753acb663",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "2c62ad4c-5400-4e72-ad97-ab00e3194d31",
    "metadata": {},
    "outputs": [],
@@ -76,31 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4ab0a1c6-5bd2-44d9-b141-8e02ddbbb4b9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
-       " 'section': 'General course-related questions',\n",
-       " 'question': 'Course - When will the course start?',\n",
-       " 'course': 'data-engineering-zoomcamp'}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "documents[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "e1433003-082e-42ec-8944-a56f836a215c",
    "metadata": {},
    "outputs": [],
@@ -113,27 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "bef5c4c1-b365-4423-aa90-d38b17ffa599",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = \"the course has already started, can I still enroll?\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "4b34ca61-63f9-4ecf-bfc7-158151d1a976",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x7945538d43a0>"
+       "<minsearch.Index at 0x75f5c43e5240>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,64 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "1ef93160-260a-476a-85b1-e09fdc8c68b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "boost = {'question': 3.0, 'section': 0.5}\n",
-    "\n",
-    "results = index.search(\n",
-    "    query=q,\n",
-    "    filter_dict={'course': 'data-engineering-zoomcamp'},\n",
-    "    boost_dict=boost,\n",
-    "    num_results=5\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "09262ab8-af40-40a1-bc69-d3490024798f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'text': \"Yes, even if you don't register, you're still eligible to submit the homeworks.\\nBe aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\",\n",
-       "  'section': 'General course-related questions',\n",
-       "  'question': 'Course - Can I still join the course after the start date?',\n",
-       "  'course': 'data-engineering-zoomcamp'},\n",
-       " {'text': 'You can start by installing and setting up all the dependencies and requirements:\\nGoogle cloud account\\nGoogle Cloud SDK\\nPython 3 (installed with Anaconda)\\nTerraform\\nGit\\nLook over the prerequisites and syllabus to see if you are comfortable with these subjects.',\n",
-       "  'section': 'General course-related questions',\n",
-       "  'question': 'Course - What can I do before the course starts?',\n",
-       "  'course': 'data-engineering-zoomcamp'},\n",
-       " {'text': 'Yes, we will keep all the materials after the course finishes, so you can follow the course at your own pace after it finishes.\\nYou can also continue looking at the homeworks and continue preparing for the next cohort. I guess you can also start working on your final capstone project.',\n",
-       "  'section': 'General course-related questions',\n",
-       "  'question': 'Course - Can I follow the course after it finishes?',\n",
-       "  'course': 'data-engineering-zoomcamp'},\n",
-       " {'text': 'Star the repo! Share it with friends if you find it useful ❣️\\nCreate a PR if you see you can improve the text or the structure of the repository.',\n",
-       "  'section': 'General course-related questions',\n",
-       "  'question': 'How can we contribute to the course?',\n",
-       "  'course': 'data-engineering-zoomcamp'},\n",
-       " {'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
-       "  'section': 'General course-related questions',\n",
-       "  'question': 'Course - When will the course start?',\n",
-       "  'course': 'data-engineering-zoomcamp'}]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "25e8fbdf-ed23-4d3f-bc37-539d07a495e7",
    "metadata": {},
    "outputs": [],
@@ -211,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "9b2440e8-2d31-4aa9-98ad-ac4bf21a9ec1",
    "metadata": {},
    "outputs": [],
@@ -221,186 +130,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ab9db21e-4dea-4839-ba57-68abfbc87714",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'the course has already started, can I still enroll?'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "ed3e2ae2-d4fc-475a-99bd-3d9a35b05a61",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = client.chat.completions.create(\n",
-    "    model='gpt-4o',\n",
-    "    messages=[{\"role\": \"user\", \"content\": q}]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
-   "id": "130aa4ca-fbb9-407f-8fcc-facbf9fd6089",
+   "id": "e430f08c-4cec-41db-8049-32827e22b199",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Enrollment policies can vary significantly depending on the institution and the specific course. Here are a few general steps you can take to find out if you can still enroll:\\n\\n1. **Check the Course Website**: Some courses have detailed information about late enrollment policies on their website.\\n\\n2. **Contact the Instructor**: The instructor of the course may have the authority to allow late enrollments or may provide guidance on how to proceed.\\n\\n3. **Consult Academic Advising**: Most colleges and universities have academic advisors who can help you understand the options and procedures for late enrollment.\\n\\n4. **Registrar's Office**: The registrar's office can provide official information about deadlines and the process for enrolling in courses after they have started.\\n\\n5. **Consider Online or Self-Paced Options**: If you are unable to enroll in the traditional course, look for online or self-paced alternatives that might have more flexible enrollment policies.\\n\\nRemember to act promptly, as the longer you wait, the more difficult it may be to catch up with the coursework.\""
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "response.choices[0].message.content"
+    "def search(query):\n",
+    "    boost = {'question': 3.0, 'section': 0.5}\n",
+    "\n",
+    "    results = index.search(\n",
+    "        query=query,\n",
+    "        filter_dict={'course': 'data-engineering-zoomcamp'},\n",
+    "        boost_dict=boost,\n",
+    "        num_results=10\n",
+    "    )\n",
+    "\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "2c2301ca-4b56-4c91-8a36-b23da863e90c",
+   "execution_count": 17,
+   "id": "c75b8744-1b69-4ac3-8145-62527013f2bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_template = \"\"\"\n",
+    "def build_prompt(query, search_results):\n",
+    "    prompt_template = \"\"\"\n",
     "You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from FAQ database. \n",
     "Use only facts from the CONTEXT when answering the QUESTON. \n",
-    "If the CONTEXT doesn't contain the answer, output NONE.\n",
     "\n",
     "QUESTION: {question}\n",
     "\n",
     "CONTEXT: \n",
     "{context}\n",
-    "\"\"\".strip()"
+    "\"\"\".strip()\n",
+    "    \n",
+    "    context = \"\"\n",
+    "    for doc in search_results:\n",
+    "        context = context + f\"section: {doc['section']}\\nquestion: {doc['question']}\\nanswer: {doc['text']}\\n\\n\"\n",
+    "    \n",
+    "    prompt = prompt_template.format(question=query, context=context).strip()\n",
+    "    return prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "736bcb49-9041-4172-836a-b428f5f42dd3",
+   "execution_count": 18,
+   "id": "0e643f28-59a0-4fdd-9541-1db7bbf5f4b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "context = \"\"\n",
-    "for doc in results:\n",
-    "    context = context + f\"section: {doc['section']}\\nquestion: {doc['question']}\\nanswer: {doc['text']}\\n\\n\""
+    "def llm(prompt):\n",
+    "    response = client.chat.completions.create(\n",
+    "        model='gpt-4o',\n",
+    "        messages=[{\"role\": \"user\", \"content\": prompt}]\n",
+    "    )\n",
+    "    \n",
+    "    return response.choices[0].message.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "457b7315-e1e4-448a-8757-abe6d7f36e61",
+   "execution_count": 26,
+   "id": "3885ddb9-9cfa-421a-a26a-2c77a1680f58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = prompt_template.format(question=q, context=context).strip()"
+    "query = \"How do I run kafka?\"\n",
+    "\n",
+    "def rag(query):\n",
+    "    search_results = search(query)\n",
+    "    prompt = build_prompt(query, search_results)\n",
+    "    answer = llm(prompt)\n",
+    "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "12c8b5c1-1c7d-41cd-b000-b3728cf9604c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from FAQ database. \n",
-      "Use only facts from the CONTEXT when answering the QUESTON. \n",
-      "If the CONTEXT doesn't contain the answer, output NONE.\n",
-      "\n",
-      "QUESTION: the course has already started, can I still enroll?\n",
-      "\n",
-      "CONTEXT: \n",
-      "section: General course-related questions\n",
-      "question: Course - Can I still join the course after the start date?\n",
-      "answer: Yes, even if you don't register, you're still eligible to submit the homeworks.\n",
-      "Be aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\n",
-      "\n",
-      "section: General course-related questions\n",
-      "question: Course - What can I do before the course starts?\n",
-      "answer: You can start by installing and setting up all the dependencies and requirements:\n",
-      "Google cloud account\n",
-      "Google Cloud SDK\n",
-      "Python 3 (installed with Anaconda)\n",
-      "Terraform\n",
-      "Git\n",
-      "Look over the prerequisites and syllabus to see if you are comfortable with these subjects.\n",
-      "\n",
-      "section: General course-related questions\n",
-      "question: Course - Can I follow the course after it finishes?\n",
-      "answer: Yes, we will keep all the materials after the course finishes, so you can follow the course at your own pace after it finishes.\n",
-      "You can also continue looking at the homeworks and continue preparing for the next cohort. I guess you can also start working on your final capstone project.\n",
-      "\n",
-      "section: General course-related questions\n",
-      "question: How can we contribute to the course?\n",
-      "answer: Star the repo! Share it with friends if you find it useful ❣️\n",
-      "Create a PR if you see you can improve the text or the structure of the repository.\n",
-      "\n",
-      "section: General course-related questions\n",
-      "question: Course - When will the course start?\n",
-      "answer: The purpose of this document is to capture frequently asked technical questions\n",
-      "The exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\n",
-      "Subscribe to course public Google Calendar (it works from Desktop only).\n",
-      "Register before the course starts using this link.\n",
-      "Join the course Telegram channel with announcements.\n",
-      "Don’t forget to register in DataTalks.Club's Slack and join the channel.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(prompt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "640093b0-d0e4-4af0-8bbb-856d6d86c10d",
+   "execution_count": 27,
+   "id": "8205443d-8fcd-4bf4-8bc9-2dc9fa6f58d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Yes, even if you don't register, you're still eligible to submit the homeworks. Be aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\""
+       "'To run Kafka, follow the specific instructions based on the language you are using:\\n\\n**For Java Kafka:**\\n1. Navigate to the project directory.\\n2. Run the following command in the terminal:\\n   ```sh\\n   java -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java\\n   ```\\n\\nReplace `<jar_name>` with the actual name of your JAR file.\\n\\n**For Python Kafka:**\\n1. Create and activate a virtual environment and install the required packages:\\n   ```sh\\n   python -m venv env\\n   source env/bin/activate\\n   pip install -r ../requirements.txt\\n   ```\\n   If you are on Windows, use `env\\\\Scripts\\\\activate` instead of `source env/bin/activate`.\\n\\n2. To deactivate the virtual environment after use, run:\\n   ```sh\\n   deactivate\\n   ```\\n\\nMake sure Docker images for Kafka are up and running if you are using Docker.\\n\\nBy following these steps, you should be able to run Kafka producers, consumers, and streams in the terminal.'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response = client.chat.completions.create(\n",
-    "    model='gpt-4o',\n",
-    "    messages=[{\"role\": \"user\", \"content\": prompt}]\n",
-    ")\n",
-    "response.choices[0].message.content"
+    "rag(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c9c78610-69b9-404a-81d4-3bceb20a1e55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Yes, you can still enroll in the course even after it has started. You are eligible to submit the homework even if you're not officially registered. However, please be mindful of the deadlines for turning in your final projects and try not to leave everything to the last minute.\""
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag('the course has already started, can I still enroll?')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e430f08c-4cec-41db-8049-32827e22b199",
+   "id": "8633bf91-a18f-40e4-8014-4be640c3c352",
    "metadata": {},
    "outputs": [],
    "source": []
