--- a/01-intro/rag-intro.ipynb
+++ b/01-intro/rag-intro.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3be35bd6-efbe-40ea-a2ab-6ead08d42bdc",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "85f18aea-0eec-4bf4-8f00-82bd3049846b",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "65ff1a07-94d1-40fc-96b9-44c753acb663",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2c62ad4c-5400-4e72-ad97-ab00e3194d31",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e1433003-082e-42ec-8944-a56f836a215c",
    "metadata": {},
    "outputs": [],
@@ -89,17 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4b34ca61-63f9-4ecf-bfc7-158151d1a976",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x75f5c43e5240>"
+       "<minsearch.Index at 0x771985143340>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "25e8fbdf-ed23-4d3f-bc37-539d07a495e7",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9b2440e8-2d31-4aa9-98ad-ac4bf21a9ec1",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "e430f08c-4cec-41db-8049-32827e22b199",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "c75b8744-1b69-4ac3-8145-62527013f2bd",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "0e643f28-59a0-4fdd-9541-1db7bbf5f4b5",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "3885ddb9-9cfa-421a-a26a-2c77a1680f58",
    "metadata": {},
    "outputs": [],
@@ -208,17 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "8205443d-8fcd-4bf4-8bc9-2dc9fa6f58d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'To run Kafka, follow the specific instructions based on the language you are using:\\n\\n**For Java Kafka:**\\n1. Navigate to the project directory.\\n2. Run the following command in the terminal:\\n   ```sh\\n   java -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java\\n   ```\\n\\nReplace `<jar_name>` with the actual name of your JAR file.\\n\\n**For Python Kafka:**\\n1. Create and activate a virtual environment and install the required packages:\\n   ```sh\\n   python -m venv env\\n   source env/bin/activate\\n   pip install -r ../requirements.txt\\n   ```\\n   If you are on Windows, use `env\\\\Scripts\\\\activate` instead of `source env/bin/activate`.\\n\\n2. To deactivate the virtual environment after use, run:\\n   ```sh\\n   deactivate\\n   ```\\n\\nMake sure Docker images for Kafka are up and running if you are using Docker.\\n\\nBy following these steps, you should be able to run Kafka producers, consumers, and streams in the terminal.'"
+       "'To run Kafka in a Java environment, you can execute the following command in the project directory:\\n\\n```bash\\njava -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java\\n```\\n\\nReplace `<jar_name>` with the actual name of your JAR file. This command will run the `JsonProducer` class which is your Kafka producer.'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,17 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "c9c78610-69b9-404a-81d4-3bceb20a1e55",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Yes, you can still enroll in the course even after it has started. You are eligible to submit the homework even if you're not officially registered. However, please be mindful of the deadlines for turning in your final projects and try not to leave everything to the last minute.\""
+       "'Yes, you can still enroll in the course even after the start date. You are eligible to submit the homeworks regardless of your registration status. However, be mindful of the deadlines for turning in the final projects to avoid leaving everything for the last minute.'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,8 +250,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8633bf91-a18f-40e4-8014-4be640c3c352",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
+       " 'section': 'General course-related questions',\n",
+       " 'question': 'Course - When will the course start?',\n",
+       " 'course': 'data-engineering-zoomcamp'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "documents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d185eba1-4236-4049-ac78-68003a3ccb42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from elasticsearch import Elasticsearch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5d2c4ad2-22ee-45b8-8de5-4eff87949956",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "es_client = Elasticsearch('http://localhost:9200')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e862c999-27a1-4ae1-9e8d-9dd6060cccf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'name': '6c4dc8500cc0', 'cluster_name': 'docker-cluster', 'cluster_uuid': 'AsRKnPNmSs-BBgHR-Ezx2w', 'version': {'number': '8.4.3', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '42f05b9372a9a4a470db3b52817899b99a76ee73', 'build_date': '2022-10-04T07:17:24.662462378Z', 'build_snapshot': False, 'lucene_version': '9.3.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es_client.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "62cb2cbf-9adf-4d3f-b9ad-858cb71e1121",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index_settings = {\n",
+    "    \"settings\": {\n",
+    "        \"number_of_shards\": 1,\n",
+    "        \"number_of_replicas\": 0\n",
+    "    },\n",
+    "    \"mappings\": {\n",
+    "        \"properties\": {\n",
+    "            \"text\": {\"type\": \"text\"},\n",
+    "            \"section\": {\"type\": \"text\"},\n",
+    "            \"question\": {\"type\": \"text\"},\n",
+    "            \"course\": {\"type\": \"keyword\"} \n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "index_name = \"course-questions\"\n",
+    "\n",
+    "es_client.indices.create(index=index_name, body=index_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6e46a6f7-69c7-4307-a323-9b908a92e471",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.auto import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "33c00920-da6f-4a3d-b26f-bb58992496b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 948/948 [00:26<00:00, 36.27it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for doc in tqdm(documents):\n",
+    "    es_client.index(index=index_name, document=doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "abf72b49-1a1a-4571-832f-634b51c42955",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"I just discovered the course. Can I still join it?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f3dab31d-99f5-4912-9cb1-1f5ae375342d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elastic_search(query):\n",
+    "\n",
+    "    search_query = {\n",
+    "        \"size\": 5,\n",
+    "        \"query\": {\n",
+    "            \"bool\": {\n",
+    "                \"must\": {\n",
+    "                    \"multi_match\": {\n",
+    "                        \"query\": query,\n",
+    "                        \"fields\": [\"question^3\", \"text\", \"section\"],\n",
+    "                        \"type\": \"best_fields\"\n",
+    "                    }\n",
+    "                },\n",
+    "                \"filter\": {\n",
+    "                    \"term\": {\n",
+    "                        \"course\": \"data-engineering-zoomcamp\"\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    response = es_client.search(index=index_name, body=search_query)\n",
+    "    \n",
+    "    result_docs = []\n",
+    "    \n",
+    "    for hit in response['hits']['hits']:\n",
+    "        result_docs.append(hit['_source'])\n",
+    "    \n",
+    "    return result_docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "0aa88ecd-d738-4b85-a0c5-b5390454f1c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rag(query):\n",
+    "    search_results = elastic_search(query)\n",
+    "    prompt = build_prompt(query, search_results)\n",
+    "    answer = llm(prompt)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "c3da442a-7794-4595-9de3-3932bae06ec7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Yes, you can still join the course even if you discovered it after the start date. You are eligible to submit the homeworks even if you haven't registered. However, please note that there will be deadlines for turning in the final projects, so it's important not to leave everything until the last minute.\""
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a76eeea6-7663-4557-b666-a3a39f5bcd55",
    "metadata": {},
    "outputs": [],
    "source": []
